k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: warrantyweb
  name: warrantyweb
  namespace: dealer-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warrantyweb
  strategy: {}
  template:
    metadata:
      labels:
        app: warrantyweb
    spec:
      containers:
      - image: opas/ppswwarranty-ui:latest
        name: ppswwarranty-ui
        ports:
          - containerPort: 80
        imagePullPolicy: Always
        resources: {}
status: {}
