k8s/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: warrantyweb
  namespace: dealer-web
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`b2b.ppsuperwheels.com`) && PathPrefix(`/warranty`)
      priority: 10
      services:
        - name: warrantyweb
          port: 80
  tls:
    secretName: dealer-web-tls
